--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,10 @@
         <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}/" />
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/css/auto-generated-from-ww.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/css/wmd.css" | prepend: site.baseurl }}">
+        <script type="text/x-mathjax-config">MathJax.Hub.Config({ jax: ["input/MathML", "output/HTML-CSS"] });</script>
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=MML_HTMLorMML"></script>
 
     </head>
