--- a/css/wmd.css
+++ b/css/wmd.css
@@ -15,3 +15,9 @@ table, fieldset
 /* the big margin-bottom on the pre doesn't look right when it's in our fieldset */
 fieldset.ww-project-file-source pre
   { margin-bottom:6px; }
+
+/* style latexml display math a little differently from on-wiki
+ * (maybe I should do it there too?)
+ */
+table.ltx_equation, table.ltx_equationgroup 
+  { width: auto !important; margin-left: 3em; }
