--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
 
-    <a class="site-title" href="/">{{ site.name }}</a>
+    <a class="site-title" href="{{site.baseurl}}/">{{ site.name }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -17,8 +17,8 @@
         </svg>
       </a>
       <div class="trigger">
-        <a class="page-link" href="/about">About</a>
-        <a class="page-link" href="/projects">Projects</a>
+        <a class="page-link" href="{{site.baseurl}}/about">About</a>
+	<a class="page-link" href="{{site.baseurl}}/projects">Projects</a>
       </div>
     </nav>
 
