direct effects %.make.log target some fixes on other pages

--- a/css/auto-generated-from-ww.css
+++ b/css/auto-generated-from-ww.css
@@ -266,6 +266,7 @@ h1.ltx_title_document { position:relative; text-align:center;
 h1.ltx_title_document .ww-altlinks
   { position: absolute; bottom:3px; right:0; /*width:100%; margin-left:0px;
     text-align:right;*/ font-size:53%; z-index:2; }
+.latexml .ww-altlinks { z-index:2; }
 
 .latexml h1.ltx_title_section { font-size:150%; }
 .latexml h1.ltx_title_subsection { font-size: 125%; }
@@ -286,5 +287,11 @@ h1.ltx_title_document .ww-altlinks
 .ltx_abstract { width:90%; padding-left:5%; padding-right:5%; text-align:justify; }
 .ltx_title_abstract { display:inline; font-weight:bold; }
 .ltx_abstract .ltx_title_abstract + p { display:inline; }
+
+.latexml mtd { padding:3px; }
+
+.latexml-inline .ltx_para:first-child,
+  .latexml-inline .ltx_para:first-child .ltx_p:first-child
+  { display:inline; }
 
 /* TODO: everything in the old latexml.css from bib items down.  Equation numbers are okay as is, I think. */
